== 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b32.zip V1.6bb32]  [attachment:wiki:SoftwareReleases:eLife-1.6b32-libs.zip Libs-V1.6b32] ==

''' Scripting '''

Implemented initial groovy script system. See [http://groovy.codehause.org] for Groovy language documentation, and [ServerDocs/GroovyScripting] for details 
of the scripting implementation. Issue [ticket:464]

Refactored Jython scripting to allow integrated support of Groovy and Jython scripts (eg. on list of scripts sent to the client).

''' Admin '''

Fixed issue on reloading scripts.

''' General '''

Split finishedLoadingConfig into two methods, one which is called before every comms connect (prepareToAttatchComms) , and one which is called once (finishedReadingConfig). 
Removes excessive adding of internal devices. Resolves [ticket:594],[ticket:597]

''' M1 '''

Merged in latest changes.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b31.zip V1.6b31]   ==

''' General '''

Moved second message insance to INFO of stack trace.


== Released [attachment:wiki:SoftwareReleases:eLife-1.6b30.zip V1.6b30]   ==

''' General '''

Show full stack trace for a command added to the cache with no display name, move to INFO so it does not display on the client.

Allow multiple scripts to be added keyed to the same Display name.

''' Script '''

Ensure script communication messages have correct display names

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b29.zip V1.6b29]   ==

''' General '''

Added error messages if two devices with the same key are added to a model.

Tuned cache error message to display calling method trace, if no display_name is provided. Resovles [ticket:592]

''' CBUS '''

Ensure state is correctly cleared dring startup, to ensure correct MMI processing. Resolves [ticket:591]

Ensure CBUS properly attends to decimal strings in the config file.

Ensure DLT devices can send and receive levels.  Resolves [ticket:14]

''' Jython Scripts '''
