@@ -1,17 +1,4 @@
 <SCRIPT_STATUS>
-  <SCRIPT NAME="Jukeboxon" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="Jukeboxon1" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="Jukeboxonoff" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="KramerFollowTutondo" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="plasmaDNGonoff" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="ProcessDLT" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="show" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="ShowDiningLight" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="test" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="tv" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="volumeup" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="basicTest" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="BIGraph" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="counter" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="DoorStrike" ENABLED="enabled" STATUS="" />
+  <SCRIPT NAME="PoolPump" ENABLED="enabled" STATUS="" />
+  <SCRIPT NAME="TestPoolPump" ENABLED="enabled" STATUS="" />
 </SCRIPT_STATUS>
